  of targets (it can now) and nested "unknown" elements have always
  been considered to be tasks (changed as well).

* <fixcrlf> would fail for files that contained lines longer than 8kB.

* Some junit formatters incorrectly assumed that all testcases would
  inherit from junit.framework.TestCase.

* <fixcrlf> dropped the first characters from Mac files.

Other changes:
--------------
* New optional type, <classfileset> added.

* <ejbjar> now allows control over which additional classes and interfaces
  are added to the generated EJB jars. A new attribute "dependency" can be 
  defines which classes are added. The addition of classes now uses 
  the Jakarta-BCEL library rather than reflection, meaning bean classes are
  no longer loaded into Ant's JVM. 

* <available> has a new attribute named ignoreSystemClasses.

* New task <cvschangelog/> generates an XML report of changes that occur
  on CVS repository.

* New filter readers: ClassConstants, ExpandProperties, HeadFilter, 
  LineContains, LineContainsRegExp, PrefixLines, ReplaceTokens, 
  StripJavaComments, StripLineBreaks, StripLineComments, TabsToSpaces, 
  TailFilter.

* <copy>, <loadfile>, <loadproperties>, <move> support FilterChains 
  of FilterReaders.
  
* New task <loadproperties> to load contents of file as Ant properties,
  with nested <filterchain> elements.
  
* New task <loadfile> to load a whole file into a property.

* New task <echoproperties> to list your current properties to the screen
  or a file. 

* New tasks <bzip2> and <bunzip2> to pack and unpack files using the 
  BZip2 alogrithm.

* New tasks <replaceregexp>, <checksum>, <translate>, <waitfor>, 
  <manifest>, <vsscp>, <vssadd>, <vsscreate>, <splash>, <basename>, <dirname>,
  <concat>.

* A new combined <mail> task, which replaces the old <mail> and
  <mimemail> tasks, has been added.  The <mimemail> task, and 
  old SendEmail and MimeMail classes have been deprecated.

* Mail task allows specification of port number.
