@@ -44,6 +44,14 @@ to perform unarchival upon.
       true).</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">compression</td>
+    <td valign="top">compression method for untar.  Allowable values are
+       &quot;none&quot;, &quot;gzip&quot; and &quot;bzip2&quot;.  Default is
+       &quot;none&quot;.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
+
 </table>
 <h3>Examples</h3>
 <blockquote>
@@ -82,7 +90,7 @@ to perform unarchival upon.
 </pre></p>
 </blockquote>
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
