@@ -53,6 +53,28 @@
     <untar src="test8.tar" dest="."/>
   </target>
 
+  <target name="test9">
+    <tar destfile="blah" compression="Foo"/>
+  </target>
+
+  <target name="test10">
+    <tar destfile="test10.tar.gz" compression="gzip">
+      <tarfileset dir="." fullpath="/test10.xml">
+        <include name="tar.xml"/>
+      </tarfileset>
+    </tar>
+    <untar src="test10.tar.gz" dest="." compression="gzip"/>
+  </target>
+
+  <target name="test11">
+    <tar destfile="test11.tar.bz2" compression="bzip2">
+      <tarfileset dir="." fullpath="/test11.xml">
+        <include name="tar.xml"/>
+      </tarfileset>
+    </tar>
+    <untar src="test11.tar.bz2" dest="." compression="bzip2"/>
+  </target>
+
   <target name="cleanup"> 
     <delete file="test4.tar"/>
     <delete file="test5.tar"/>
@@ -63,12 +85,25 @@
     <delete file="test7.tar"/>
     <delete file="test8.tar"/>
     <delete file="test8.xml"/>
+    <delete file="test10.tar.gz"/>
+    <delete file="test10.xml"/>
+    <delete file="test11.tar.bz2"/>
+    <delete file="test11.xml"/>
   </target>
 
   <target name="feather">
     <tar destfile="asf-logo.gif.tar"
          basedir=".."
          includes="asf-logo.gif" />
+    <tar destfile="asf-logo.gif.tar.gz"
+         basedir=".."
+         includes="asf-logo.gif" 
+         compression="gzip"/>
+    <tar destfile="asf-logo.gif.tar.bz2"
+         basedir=".."
+         includes="asf-logo.gif"
+         compression="bzip2" />
   </target>
+
 
 </project>
