@@ -12,9 +12,30 @@
     <ant antfile="tar.xml" target="cleanup" />
   </target>
 
+  <target name="testGzipTarTask">
+    <ant antfile="tar.xml" target="feather" />
+    <untar src="asf-logo.gif.tar.gz" dest="." compression="gzip" />
+    <ant antfile="tar.xml" target="cleanup" />
+  </target>
+
+  <target name="testBzip2TarTask">
+    <ant antfile="tar.xml" target="feather" />
+    <untar src="asf-logo.gif.tar.bz2" dest="." compression="bzip2"/>
+    <ant antfile="tar.xml" target="cleanup" />
+  </target>
+
   <target name="realTest">
     <untar src="expected/asf-logo.gif.tar" dest="." />
   </target>
+
+  <target name="realGzipTest">
+    <untar src="expected/asf-logo.gif.tar.gz" dest="." compression="gzip" />
+  </target>
+
+  <target name="realBzip2Test">
+    <untar src="expected/asf-logo.gif.tar.bz2" dest="." compression="bzip2"/>
+  </target>
+
 
   <target name="srcDirTest">
     <untar src="." dest="." />
